# bug-sense

./: README.md
esp32-firmware/src/: plant-vibration-sense-esp32.ino
ui-interface/: CMakeLists.txt
ui-interface/include/: logger.h  main_window.h
ui-interface/src/: logger.cpp  main.cpp  main_window.cpp  main_window.ui
